# donaproto

./: Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
app/src/idl/: raydium-amm.json
ci/: build-and-test.sh
programs/donaproto/: Cargo.toml
programs/donaproto/src/: errors.rs  lib.rs  utils.rs
programs/donaproto/src/contexts/: create_donation.rs  donate.rs  initialize_contributor.rs  initialize_creator.rs  initialize_donation_protocol.rs  mod.rs  withdraw_funds.rs
programs/donaproto/src/instructions/: authorize_clmm.rs  authorize_pool.rs  create_donation.rs  create_donation_v2.rs  donate.rs  donate_v2.rs  initialize_contributor.rs  initialize_creator.rs  initialize_donation_protocol.rs  mod.rs  withdraw_funds.rs  withdraw_funds_v2.rs
programs/donaproto/src/states/: authorized_clmm.rs  authorized_pool.rs  common.rs  contributor_data.rs  creator_data.rs  donation_data.rs  donation_protocol_data.rs  mod.rs
tests/: authorizeClmm.test.js  authorizeClmmPool.test.js  createDonation.test.js  createDonationV2.test.js  donaproto.ts  donate.test.js  donateV2.test.js  initializeContributor.test.js  initializeCreator.test.js  initializeDonationProtocol.test.js  intitalizeDonationProtocol.test.js  withdrawFunds.test.js  withdrawFundsV2.test.js
tests/common/: amm_helper.js  seeds.js  utils.js
